Fixed spacing and expanded hover styles

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,9 @@
 body {
 	background-color: #689F38;
+	background-image: url('../img/background-img.jpeg');
+	background-size: cover;
+	color: rgb(33,33,33);
+	font-family: Roboto, sans-serif;
 }
 #container {
     width: 350px;
@@ -15,10 +19,13 @@ h1 {
 	background-color: #8BC34A;
 	padding: 15px 0;
 	border-radius: 4%;
+	box-shadow: 1px 1px 5px #212121;
+	margin-bottom: 10px;
 }
 section {
 	clear: both;
 	padding: 0 10px;
+	line-height: 1.5em;
 }
 #list-input-section {
 	padding-bottom: 10px;
@@ -34,38 +41,55 @@ section {
 	vertical-align: center;
 	color: white;
 	border: 0;
-	box-shadow: 2px 2px 5px #212121;
+	box-shadow: 1px 1px 5px #212121;
 	margin-right: 10px;
+	line-height: normal;
 }
 #add-item-box {
 	width: 295px;
-	border: 0px;
+	height: 20px;
+	border: 1px solid #689F38;
+
 }
 #add-button:hover {
 	background-color: #FF80AB;
-	box-shadow: 3px px 7px #212121;
-
+	box-shadow: 2px 2px 6px #212121;
 }
 #add-button,
 #unchecked-section > input,
 #checked-section > input {
 	float:left;
 }
-#unchecked-section > img,
-#checked-section > img,
+#unchecked-section > span,
+#checked-section > span ,
 .delete-button {
 	float: right;
 }
-#unchecked-section > input:hover,
-#checked-section > input:hover {
-	display: block;
+#item-checkbox {
+	margin-right: 10px;
+}
+section span:hover {
+	text-decoration: underline;
 }
 .checked-item {
+	color: rgba(33,33,33,.5);
 	text-decoration: line-through;
 }
-.delete-button {
-	float: right;
+.checked-item:hover {
+	color: rgba(33,33,33,.8);
+}
+#delete-checked-link {
+	padding-left: 24.895px;
+    color: rgba(33,33,33,.5);
+    text-decoration: none;
+}
+#delete-checked-link:hover {
+	color: rgba(33,33,33,.8);
+	text-decoration: underline;
 }
 footer {
 	text-align: center;
+	padding: 5px 0;
+	font-size: .8em;
+    color: rgba(33,33,33,.5);
 }
